<resources>
    <string name="app_name">Mr. Waste</string>

    <string name="email">Email</string>
    <string name="contact_no">Contact No.</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="consumer">Consumer</string>
    <string name="mr_waste">Mr. Waste</string>
    <string name="already_registered">Already registered?</string>
    <string name="have_not_registered">Haven\'t registered yet?</string>
    <string name="register">Register</string>
    <string name="working">Working&#8230;</string>
    <string name="fill_all_fields">Please fill up all fields</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="password_too_short">Password should be at least 6 characters.</string>

    <string name="title_activity_maps">Map</string>
    <string name="current_location">Current Location:</string>
    <string name="no_map_found">No map found.</string>
    <string name="failed_to_get_location">Failed to get current location.</string>
    <string name="gps_permission_denied">Permission denied. Showing current location needs GPS to be turned on.</string>
    <string name="location_permission_denied">Permission denied. Please turn on the location permissions from settings.</string>
    <string name="camera_permission_denied">Permission denied. Please turn on the camera permissions from settings.</string>
    <string name="auth_failed_no_net_reg">Failed! Check your internet connection. If you have already registered, then log in.</string>
    <string name="auth_failed_no_net_or_not_reg">Failed! Check your internet connection and be sure to register first if you haven\'t.</string>

    <string name="scan_product">Scan product</string>
    <string name="fit_image_to_scan">Fit image to scan</string>
    <string name="products_marked">Products you placed requests to sell</string>
    <string name="products_prices">Products selling prices</string>
    <plurals name="pieces">
        <item quantity="one">piece</item>
        <item quantity="other">pieces</item>
    </plurals>
    <plurals name="requests">
        <item quantity="one">request</item>
        <item quantity="other">requests</item>
    </plurals>
    <string name="per_piece">per piece</string>
    <string name="save">Save</string>
    <string name="close">Close</string>

    <string name="waste_requests">Waste Requests</string>

    <string name="humidity">Humidity</string>
    <string name="dewpoint">Dewpoint</string>
    <string name="relative_humidity">Relative humidity</string>
    <string name="air_temperature">Air temperature</string>
    <string name="water_temperature">Water temperature</string>
    <string name="surface_temperature">Surface temperature</string>
    <string name="soil_temperature">Soil temperature</string>
    <string name="sky_conditions">Sky conditions</string>

    <string name="average_temperature">Average temp.</string>
    <string name="max_temperature">Max temp.</string>
    <string name="min_temperature">Min temp.</string>

    <string name="no_data_available">No data available</string>
</resources>
