<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo_app"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:textColorHint="@android:color/white"
            app:counterEnabled="true"
            app:counterTextColor="@android:color/darker_gray"
            app:counterMaxLength="200"
            app:hintEnabled="true"
            app:hintTextColor="@android:color/white"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="200"
                android:hint="@string/email"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/holo_green_light"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textColorHint="@android:color/white"
            app:counterEnabled="true"
            app:counterTextColor="@android:color/darker_gray"
            app:counterMaxLength="20"
            app:hintEnabled="true"
            app:hintTextColor="@android:color/white"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="20"
                android:hint="@string/contact_no"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/holo_green_light"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup_userType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/consumer"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mr_waste"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@android:color/white"
            app:counterEnabled="true"
            app:counterTextColor="@android:color/darker_gray"
            app:counterMaxLength="200"
            app:hintEnabled="true"
            app:hintTextColor="@android:color/white"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="200"
                android:hint="@string/password"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textColorHighlight="@android:color/holo_green_light"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:text="@string/sign_up"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/log_in"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
