<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="arAvailable"
            type="boolean" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardButton_goToAR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linearLayout_arButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="@color/colorGreen">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="16dp"
                            android:src="@drawable/logo_ar"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:gravity="center"
                            android:text="@string/scan_product"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayout_productsRequested"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/products_marked"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_productsRequested"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        tools:listitem="@layout/layout_item_product_and_price"
                        tools:itemCount="2"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayout_productsPrices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/products_prices"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryText"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_productsPrices"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:nestedScrollingEnabled="false"
                        android:overScrollMode="never"
                        tools:listitem="@layout/layout_item_product_and_price"
                        tools:itemCount="2"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>
